adding a user and working out the material
